# swig-eigen-numpy

./: CMakeLists.txt  README.md  dtypes.h  example.hpp  example.i  test.py
